Reproduce the issue in a reproducable spec
* Eliminate seed data in bootstrap
* Add Drawing class
* Do all setup in the spec
* Add both tested versions of GORM

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,5 @@
 grailsVersion=3.2.13
+# Appears to happen in both 6.0.x and 6.1.x
 gormVersion=6.0.12.RELEASE
+#gormVersion=6.1.10.RELEASE
 gradleWrapperVersion=3.4.1
